--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -75,7 +75,30 @@ body{
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%), url('../images/DJI_0069.JPG') lightgray 50% / cover no-repeat;
 }
 
+.translate-open-button{
+    background-color: #FFF;
+    border-left: 1px solid #D5D5D5;
+    border-top: 1px solid #9B9B9B;
+    border-bottom: 1px solid #E8E8E8;
+    border-right: 1px solid #D5D5D5;
+    cursor: pointer;
+    display: flex !important;
+    gap: 8px;
+    justify-content: space-between !important;
+    align-items: center !important;
+    height: 36px !important;
+    padding: 0 6px !important;
+    font-size: 12.8px;
+    color: var(--text-black);
+}
 
+
+
+.translate-open-button img{
+    width: 19px;
+    height: auto;
+    object-fit: contain;
+}
 
 .goog-tooltip {
     display: none !important;
@@ -2083,7 +2106,29 @@ text-transform: capitalize;
     width: 310px !important;
 }
 
+.story a{
+    position: relative;
+    height: 232px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 310px;
+    border: 1px solid var(--text-black);
+}
 
+.story .thumbnail{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.story .yt-icon{
+    position: relative;
+    width: 68px;
+    height: 48px;
+    object-fit: contain;
+}
 .stories{
     width: 100%;
 }
