--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -346,14 +346,14 @@ font{
     
     
     .dropdown-menu:hover ul.dropdown{
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         width: max-content;
         display: flex;
-    padding: 16.716px 15px;
-    background-color: #ffffff;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16.716px;
-
+        padding: 16.716px 15px;
+        background-color: #ffffff;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16.716px;
     }
     .dropdown li a{
         color: var(--text-black);
@@ -406,7 +406,7 @@ font{
     position: fixed;
     top: 310px;
     display: inline;
-   
+    z-index: 999 !important;
     margin-left: 18.75px;
     min-width: 195px;
     display: flex;
@@ -526,6 +526,12 @@ right: 0px;
     background-color: var(--text-white);
     box-shadow: 0px 0px 11.25px 1.266px rgba(0, 0, 0, 0.1);
     transition: 0.2s ease-in-out; 
+}
+
+.resource-img-box img{
+    width: 232.5px;
+    height: 180px;
+    object-fit: contain;
 }
 
 
@@ -981,10 +987,15 @@ gap: 17.75px;
 
     display: flex;
     width: 312px;
+    height: auto;
     padding: 24.75px 15px;
     justify-content: center;
     display: flex;
     flex-direction: column;
+}
+.right-container .map-box{
+    width: 312px;
+    height: 312px;
 }
 .recent-workshops {
     min-width: 312px; /* Fixed width */
@@ -1060,6 +1071,7 @@ line-height: 21px;
     font-size: 13.5px;
     font-weight: 400;
     margin-top: 4.5px;
+    text-transform: capitalize;
 }
 
 .recent-workshops{
@@ -1433,7 +1445,7 @@ line-height: 150%; /* 28.125px */
 
 .collab-box img {
     width: 100%;
-    height: auto;
+    height: 75px;
     margin: auto;
     display: block;
     object-fit: contain;
@@ -1822,6 +1834,21 @@ head{
     gap:16.34px;
 }
 
+.workshop-list-item-img{
+    height: 180px;
+    width: 235px;
+}
+
+.workshop-list-item-img:hover{
+    filter: brightness(0.6);
+}
+
+.workshop-list-item-venue{
+  max-width: 420px;
+  white-space: nowrap;      
+  overflow: hidden;         
+  text-overflow: ellipsis;
+}
 
 .worshop-detail-home{
 
