--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1037,12 +1037,11 @@ text-transform: capitalize;
 }
 .workshop-detail{
     display: flex;
-width: 282px;
-flex-direction: column;
-align-items: flex-start;
-gap: 19.5px;
-height: 298.5px;
-line-height: 21px;
+    width: 282px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 19.5px;
+    line-height: 21px;
 }
 
 .workshop-detail h2:after{
@@ -1060,6 +1059,7 @@ line-height: 21px;
     font-size: 13.5px;
     font-weight: 400;
     margin-top: 4.5px;
+    text-transform: capitalize;
 }
 
 .recent-workshops{
@@ -1722,6 +1722,9 @@ text-transform: capitalize;
     width: 482px;
 }
 
+.map-box{
+    width: 100%;
+}
 
 .maps img{
     width: 100%;
